# MutsukiTauriHost

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: performance.yml  platform-compat.yml
artifacts/perf/: issue2-task-pump.json
artifacts/performance/reference-windows-x64/: report.analysis.json  report.approval.json  report.json
configs/: tauri-host.example.toml
configs/profiles/: default.toml
crates/mutsuki-tauri-benchmarks/: Cargo.toml
crates/mutsuki-tauri-benchmarks/scripts/: run-reference.py
crates/mutsuki-tauri-benchmarks/src/: main.rs
crates/mutsuki-tauri-bridge/: Cargo.toml
crates/mutsuki-tauri-bridge/src/: lib.rs
crates/mutsuki-tauri-host/: Cargo.toml
crates/mutsuki-tauri-host/examples/: task_pump_benchmark.rs
crates/mutsuki-tauri-host/src/: approval.rs  builder.rs  config.rs  echo.rs  error.rs  health.rs  host.rs  lib.rs  plugin_runner.rs  tests.rs
crates/mutsuki-tauri-host/src/app_delivery/: activator.rs  delivery.rs  draft.rs  endpoint.rs  mod.rs  operation_history.rs  tests.rs  transport.rs  types.rs
crates/mutsuki-tauri-resource/: Cargo.toml
crates/mutsuki-tauri-resource/src/: error.rs  import_export.rs  lib.rs  preview.rs  provider.rs
crates/tauri-plugin-mutsuki/: Cargo.toml
crates/tauri-plugin-mutsuki/src/: lib.rs
docs/: performance-model-v1.md
docs/examples/: request-app.md
fixtures/jsonl-runner/: Cargo.toml
fixtures/jsonl-runner/src/: main.rs
skills/approval-security/: SKILL.md
skills/frontend-sdk/: SKILL.md
skills/observe/: SKILL.md
skills/plugin-runner/: SKILL.md
skills/resource-bridge/: SKILL.md
skills/runtime/: SKILL.md
skills/tauri-bridge/: SKILL.md
