[workspace]
members = [
    "crates/mutsuki-tauri-bridge",
    "crates/mutsuki-tauri-resource",
    "crates/mutsuki-tauri-host",
    "crates/mutsuki-tauri-benchmarks",
    "crates/tauri-plugin-mutsuki",
    "fixtures/jsonl-runner",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
dirs = "6.0"
cpu-time = "1.0"
mime_guess = "2.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2", default-features = false }
thiserror = "2.0"
time = "=0.3.47"
tokio = { version = "1.38", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.9"
uuid = { version = "1.10", features = ["v4", "serde"] }

mutsuki-runtime-contracts = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "1787ab5c6d9aee9982505d0686d6c2e03547275e" }
mutsuki-runtime-core = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "1787ab5c6d9aee9982505d0686d6c2e03547275e" }
mutsuki-runtime-host = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "1787ab5c6d9aee9982505d0686d6c2e03547275e" }
mutsuki-runtime-sdk = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "1787ab5c6d9aee9982505d0686d6c2e03547275e" }
mutsuki-link-local = { git = "https://github.com/sena-nana/MutsukiLink.git", rev = "26c66311e0e90ddb28d37e886bdda699f8662439" }
mutsuki-link-core = { git = "https://github.com/sena-nana/MutsukiLink.git", rev = "26c66311e0e90ddb28d37e886bdda699f8662439" }

mutsuki-tauri-bridge = { path = "crates/mutsuki-tauri-bridge" }
mutsuki-tauri-resource = { path = "crates/mutsuki-tauri-resource" }
mutsuki-tauri-host = { path = "crates/mutsuki-tauri-host" }
