[package]
name = "mutsuki-tauri-jsonl-fixture"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-wire = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "3ee98f97d17fc9feca8f2c2449a87e590d321248" }
serde_json.workspace = true
