[package]
name = "mutsuki-tauri-jsonl-fixture"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-wire = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "42fcce328b7c3a624703d26f6252b6fd5f5200bf" }
serde_json.workspace = true
